Seed, logo, 7_cluster

--- a/Data_Processing_D1/mtl_feature.ipynb
+++ b/Data_Processing_D1/mtl_feature.ipynb
@@ -485,13 +485,14 @@
     "    X, y, date_times = [], [], []\n",
     "#    count = 0\n",
     "    for timestamp in label.index:\n",
+    "        t = timestamp - td(milliseconds=1)\n",
     "        row = dict()\n",
     "        #Find the start of today and yesterday for extracting today epoch features and yesterday epoch features\n",
-    "        start_of_today = datetime(timestamp.year, timestamp.month, timestamp.day, tzinfo=timestamp.tzinfo)\n",
+    "        start_of_today = datetime(t.year, t.month, t.day, tzinfo=t.tzinfo)\n",
     "        start_of_today = pd.Timestamp(start_of_today.date(), tz=DEFAULT_TZ)\n",
-    "        start_of_yesterday = timestamp - pd.Timedelta(days=1)\n",
+    "        start_of_yesterday = t - pd.Timedelta(days=1)\n",
     "        start_of_yesterday = pd.Timestamp(start_of_yesterday.date(), tz=DEFAULT_TZ)\n",
-    "        label_cur = label.at[timestamp]\n",
+    "        label_cur = label.at[t]\n",
     "        yesterday_time_windows = [\n",
     "                (start_of_yesterday + pd.Timedelta(hours=6), start_of_yesterday + pd.Timedelta(hours=9)),\n",
     "                (start_of_yesterday + pd.Timedelta(hours=9), start_of_yesterday + pd.Timedelta(hours=12)),\n",
@@ -504,11 +505,10 @@
     "        for i in range(6):\n",
     "            start = start_of_today + pd.Timedelta(hours=i*3)\n",
     "            end = start_of_today + pd.Timedelta(hours=(i+1)*3)\n",
-    "            if start <= timestamp:\n",
-    "                today_time_windows.append((start, min(end, timestamp)))\n",
+    "            if start <= t:\n",
+    "                today_time_windows.append((start, min(end, t)))\n",
     "            else:\n",
     "                break\n",
-    "        t = timestamp - td(milliseconds=1)\n",
     "        # Features relevant to participants' info\n",
     "        for d_key, d_val in constant_features.items():\n",
     "            row[d_key] = d_val\n",
